simple list styling

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,7 +10,8 @@
   </div>
 
   <div class="items-list">
-    <%= render(:partial => 'items/item', :collection => @items) %>
+    <%= render(:partial => 'items/item', :collection => @active_items) %>
+    <%= render(:partial => 'items/item', :collection => @done_items) %>
   </div>
 
 </div>
