--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@new_item) do |f| %>
+<%= form_for(@new_item, :remote => true) do |f| %>
   <%= f.hidden_field :list_id, :value => @new_item.list_id %>
   <%= f.text_field :title, :autofocus => true %>
 <% end %>
