--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -5,6 +5,10 @@ body {
   font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
+a, a:hover, a:visited {
+  text-decoration: none !important;
+}
+
 .list-container {
   margin: 0px auto;
   text-align: center;
@@ -13,7 +17,6 @@ body {
   .new-item-form {
     margin-top: 50px;
     border-bottom: 1px solid #ccc;
-    
 
     input[type='text'] {
       outline: 0;
@@ -27,7 +30,6 @@ body {
   .items-list {
     margin-top: 50px;
     .item {
-      cursor: pointer;
       margin-top: 5px;
       padding: 10px 0;
       border: 1px solid #3498DB;
@@ -35,8 +37,20 @@ body {
       font-size: 30px;
       color: #fff;
 
-      &:hover {
-        background-color: #3498DB;
+      a, a:hover, a:visited {
+        color: #fff;
+        text-decoration: none;
+      }
+
+      &.active {
+        &:hover {
+          background-color: #3498DB;
+          cursor: pointer;
+        }
+      }
+
+      &.done {
+        text-decoration: line-through;
       }
     }
   }
