--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,31 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Items</h1>
+<div class="list-container">
 
-<table>
-  <thead>
-    <tr>
-      <th>List</th>
-      <th>Title</th>
-      <th>Done</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1>simplist</h1>
 
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.list %></td>
-        <td><%= item.title %></td>
-        <td><%= item.done %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="new-item-form">
+    <%=render partial: 'items/form', :locals => {:item => @new_item}%>
+  </div>
 
-<br>
+  <div class="items-list">
+    <%= render(:partial => 'items/item', :collection => @items) %>
+  </div>
 
-<%= link_to 'New Item', new_item_path %>
+</div>
