--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -1,3 +1,5 @@
+$('#done-sound')[0].play();
+
 var item = document.querySelector('#item-<%=@item.id%>');
 var items = document.querySelectorAll('.item');
 var itemIndex = $('.item').index(item);
