--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,3 +19,9 @@
 <audio id="done-sound" src="<%=asset_path 'Simple Approval.wav'%>"  volume="0.25" preload="none" style="display:none;"></audio>
 <audio id="create-sound" src="<%=asset_path 'WoodBlock.wav'%>" volume="0.25" preload="none" style="display:none;"></audio>
 <audio id="toggler-sound" src="<%=asset_path 'Satisfying Click.wav'%>" volume="0.25" preload="none" style="display:none;"></audio>
+
+<script type="text/javascript">
+var myApp = {
+  marking: null
+}
+</script>
